# nanovg

./: .gitignore  BUILD.md  CJK_BUG_FIX_COMPLETE.md  CJK_RENDERING_COMPLETE.md  CMakeLists.txt  CMakePresets.json  COMPUTE_SHADER_TESTING.md  DEEP_INTEGRATION_PLAN.md  DEEP_INTEGRATION_SPEC.md  DEPENDENCIES.md  FORK_PROGRESS.md  LIBRARY_SOURCES.md  Makefile  Makefile.backup  NanoVG2VulkanProject.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_COMPLETION_REPORT.md  PHASE5_PLAN.md  PHASE5_STATUS.md  PHASE6_INTEGRATION.md  PHASE6_PLAN.md  QUATERNION_COLOR_SPACE_IMPLEMENTATION.md  README.md  TESTING.md  TEXT_OPTIMIZATIONS_STATUS.md  TEXT_OPTIMIZATION_PLAN.md  TODO.md  VIRTUAL_ATLAS.md  build-jni.sh  capture_snapshot.sh  check-ppm.c  clean  compile  configure  custom_atlas.pgm  edid.md  generate_coverage_tests.py  pom.xml  (+8 more)
coverage_build/: nanovg.gcno  nvg_font_colr.gcno  nvg_font_glyph.gcno  nvg_font_info.gcno  nvg_font_shape_cache.gcno  nvg_font_shaping.gcno  nvg_font_system.gcno  nvg_vk.gcno  nvg_vk_buffer.gcno  nvg_vk_color_space.gcno  nvg_vk_color_space_math.gcno  nvg_vk_color_space_ubo.gcno  nvg_vk_context.gcno  nvg_vk_hdr_metadata.gcno  nvg_vk_pipeline.gcno  nvg_vk_render.gcno  nvg_vk_shader.gcno  nvg_vk_texture.gcno  test_api_coverage  test_api_coverage.gcno  vk_shader.gcno  vknvg_msdf.gcno  window_utils.gcno
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CMAKE_PROJECT_EXAMPLE.md  COORDINATE_SYSTEMS.md  FONT_SYSTEM_INTERFACE.md  FONT_SYSTEM_REWRITE_PLAN.md  IMPLEMENTATION_PLAN.md  quaternion-color-space.md  real-display-integration.md
docs/archaeology/: DEFRAGMENTATION.md  FREETYPE_API_PLAN.md  FREETYPE_API_STATUS.md  FREETYPE_MIGRATION_PLAN.md  FREETYPE_OPPORTUNITIES.md  LIBRARY_SOURCES.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE4_TEST_COVERAGE.md  PHASE5_COMPLETE.md  README.md  VIRTUAL_ATLAS_INTEGRATION.md  VULKAN_TOOLS.md  fontstash.h
docs/archive/: CJK_INTEGRATION_SUMMARY.md  CJK_TESTING_COMPLETE.md  OPTION_A_ANALYSIS.md  PHASE2_COMPLETE.md  PHASE4_STATUS.md  REMAINING_WORK.md  TESTING.md  TEXT_OPTIMIZATIONS_STATUS.md  VIRTUAL_ATLAS_COMPLETE.md
fonts/: README.md
screendumps/: .keep
shaders/: atlas_pack.comp  atlas_pack.comp.spv  color_gamut.glsl  color_hdr.glsl  color_transfer.glsl  fill.frag  fill.frag.spv  fill.vert  fill.vert.spv  fill.vert.spv.h  fill_grad.frag  fill_grad.frag.spv  fill_grad.vert  fill_grad.vert.spv  fill_img.frag  fill_img.frag.spv  fill_img.vert  fill_img.vert.spv  img.frag  img.frag.spv  img.vert  img.vert.spv  img_frag.h  msdf_generate.comp.spv  sdf_effects.frag.spv  simple.vert  simple.vert.spv  spv_to_header.sh  tessellate.comp.spv  tessellate_comp_spv  text_color.frag.spv  text_dual.frag  text_dual.frag.backup  text_dual.frag.spv  text_dual.frag.spv.h  text_dual.vert  text_dual.vert.spv  text_dual.vert.spv.h  text_instanced.vert  text_instanced.vert.spv  (+10 more)
src/: fontstash.h  nanovg.c  nanovg.h  nanovg_vk.h  nanovg_vk_async_upload.c  nanovg_vk_async_upload.h  nanovg_vk_atlas.h  nanovg_vk_atlas_defrag.c  nanovg_vk_atlas_defrag.h  nanovg_vk_atlas_packing.c  nanovg_vk_atlas_packing.h  nanovg_vk_batch_text.h  nanovg_vk_bidi.c  nanovg_vk_bidi.h  nanovg_vk_bitmap_emoji.c  nanovg_vk_bitmap_emoji.h  nanovg_vk_cleanup.h  nanovg_vk_color_atlas.c  nanovg_vk_color_atlas.h  nanovg_vk_colr_render.c  nanovg_vk_colr_render.h  nanovg_vk_compute.c  nanovg_vk_compute.h  nanovg_vk_compute_raster.h  nanovg_vk_emoji.c  nanovg_vk_emoji.h  nanovg_vk_emoji_tables.c  nanovg_vk_emoji_tables.h  nanovg_vk_harfbuzz.c  nanovg_vk_harfbuzz.h  nanovg_vk_image.h  nanovg_vk_internal.h  nanovg_vk_intl_text.c  nanovg_vk_intl_text.h  nanovg_vk_memory.h  nanovg_vk_msdf.c  nanovg_vk_msdf.h  nanovg_vk_multi_atlas.c  nanovg_vk_multi_atlas.h  nanovg_vk_pipeline.h  (+25 more)
src/font/: nvg_font.h  nvg_font_colr.c  nvg_font_glyph.c  nvg_font_gpu_raster.c  nvg_font_gpu_raster.h  nvg_font_gpu_types.h  nvg_font_info.c  nvg_font_internal.h  nvg_font_shape_cache.c  nvg_font_shape_cache.h  nvg_font_shaping.c  nvg_font_system.c  nvg_font_types.h
src/nanovg/: nanovg.c  nanovg_backend_types.h
src/shaders/: atlas_defrag.comp  atlas_defrag.spv  atlas_pack.comp.spv.h  color_conversion.glsl  color_space_ubo.glsl  compile.sh  fill.frag  fill.frag.spv  fill.frag.spv.h  fill_grad.frag.spv  fill_grad.vert  fill_img.frag  fill_img.vert  fill_img.vert.spv  glyph_raster.comp  glyph_raster.comp.spv  glyph_raster.comp.spv.h  glyph_raster_comp.h  img.frag  img.frag.spv  img.vert.spv  img_frag.spv  msdf_generate.comp  sdf_effects.frag  sdf_effects.frag.spv  simple.frag  simple.frag.spv  tessellate.comp  test_color_conversion.frag  test_color_conversion.frag.spv  text_alpha.frag  text_alpha.frag.spv  text_color.frag  text_color.frag.spv  text_color.frag.spv.h  text_dual.frag  text_dual.frag.spv.h  text_dual_vert.spv  text_msdf.frag.spv  text_msdf.frag.spv.h  (+4 more)
src/tools/: display_detection.c  display_detection.h  window_utils.c
src/util/: vknvg_msdf.c
src/vulkan/: khr_df_enums.h  nvg_vk_buffer.c  nvg_vk_color_space.c  nvg_vk_color_space.h  nvg_vk_color_space_math.c  nvg_vk_color_space_math.h  nvg_vk_compute.c  (+15 more)
tests/: display_query_unified.c  image_analyzer.cpp  test_arc_000.c  test_arc_001.c  test_arcto_000.c  test_async_upload.c  test_atlas_defrag.c  test_atlas_growth.c  test_atlas_packing.c  test_atlas_prewarm.c  test_atlas_resize.c  test_bad_apple.c  test_baseline_kerning.c  test_baselineshift_000.c  test_baselineshift_001.c  test_baselineshift_002.c  test_batch_text.c  test_beginframe_000.c  test_beginframe_001.c  test_beginframe_002.c  test_beginpath_000.c  test_benchmark.c  test_benchmark_text_instancing.c  test_bezierto_000.c  test_bidi.c  test_bitmap_emoji.c  test_blending.c  test_bounds_debug.c  test_canvas_api.c  test_chinese_poem.c  test_circle_000.c  test_circle_001.c  test_cjk_eviction.c  test_cjk_real_rendering.c  test_cjk_rendering.c  test_cjk_stress.c  test_clear_simple.c  test_closepath_000.c  test_color_atlas.c  test_color_emoji.c  (+217 more)
tools/: bw-ppm-analyzer  bw-ppm-analyzer.c  debug_nvg_text  debug_nvg_text.c  dump_atlas.c  ppm-analyzer  ppm-analyzer.c
(+44 files in other folders)
